# chromium-style-qrcode-generator-with-wasm

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.constant.js  vite.helper.js
.github/workflows/: deploy-to-github-pages.yml  preview-build.yml  preview-deploy.yml  preview-start.yml
assets/: index-CD-zbFjJ.js  index-CNjA3Yxz.css  index-CmlBqQ0_.js  index-DR_AkTfj.js  index-DpzLMkmM.css  index-DzcgJUWt.js  qrcode_generator_with_wasm-Cp3rYCb6.js  qrcode_generator_with_wasm_bg-BguyjTHY.wasm  qrcode_generator_with_wasm_bg-HKghsyP4.wasm
src/: app.css  app.js  lib.rs
